add get_posts_interactor
