# gyaan_auth/api_specs/api_spec.json
@@ -71,165 +71,6 @@
             "is_admin",
             "is_domain_expert"
           ]
-        },
-        "User":{
-          "type":"object",
-          "properties":{
-            "user_id":{
-              "type":"integer"
-            },
-            "name":{
-              "type":"string"
-            }
-          },
-          "required":[
-            "user_id",
-            "name"
-          ]
-        },
-        "Comment":{
-          "type":"object",
-          "properties":{
-            "comment_id":{
-              "type":"integer"
-            },
-            "comment_content":{
-              "type":"string"
-            },
-            "commented_at":{
-              "type":"string",
-              "format":"date-time"
-            },
-            "reactions_count":{
-              "type":"integer"
-            },
-            "commented_by":{
-              "$ref":"#/definitions/User"
-            }
-          },
-          "required":[
-            "comment_id",
-            "comment_content",
-            "commented_at",
-            "reactions_count",
-            "commented_by"
-          ]
-        },
-        "Answer":{
-          "type":"object",
-          "properties":{
-            "comment_id":{
-              "type":"integer"
-            },
-            "comment_content":{
-              "type":"string"
-            },
-            "commented_at":{
-              "type":"string",
-              "format":"date-time"
-            },
-            "reactions_count":{
-              "type":"integer"
-            },
-            "commented_by":{
-              "$ref":"#/definitions/User"
-            },
-            "approved_by":{
-              "$ref":"#/definitions/User"
-
-            }
-          },
-          "required":[
-            "comment_id",
-            "comment_content",
-            "commented_at",
-            "reactions_count",
-            "commented_by",
-            "approved_by"
-          ]
-        },
-        "Tag":{
-          "type":"object",
-          "properties":{
-            "tag_id":{
-              "type":"integer"
-            },
-            "tag_name":{
-              "type":"string"
-            }
-          },
-          "required":[
-            "tag_id",
-            "tag_name"
-          ]
-        },
-        "Post":{
-          "type":"object",
-          "properties":{
-            "post_id":{
-              "type": "integer"
-            },
-            "tittle":{
-              "type":"string"
-            },
-            "description":{
-              "type":"string"
-            },
-            "posted_at":{
-              "type":"string",
-              "format":"date-time"
-            },
-            "posted_by":{
-            "$ref":"#/definitions/User"
-            },
-            "comments_count":{
-              "type": "integer"
-            },
-            "reactions_count":{
-              "type": "integer"
-            },
-            "reacted_by":{
-              "type":"array",
-              "items":{
-                "$ref": "#/definitions/User"
-              }
-            },
-            "domain_id":{
-              "type": "integer"
-            },
-            "domain_name":{
-              "type":"string"
-            },
-            "tags": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Tag"
-              }
-            },
-            "comments":{
-              "type":"array",
-              "items":{
-                "$ref": "#/definitions/Comment"
-              }
-            },
-            "answer":{
-              "$ref":"#/definitions/Answer"
-            }
-          },
-          "required":[
-            "post_id",
-            "tittle",
-            "posted_by",
-            "posted_at",
-            "comments_count",
-            "reactions_count",
-            "reacted_by",
-            "domain_id",
-            "domain_name",
-            "tags",
-            "comments"
-          ]
-
         }
     },
     "parameters": {
@@ -245,7 +86,7 @@
           "name":"offset",
           "in" :"query",
           "description": "Offset Value",
-          "required": True,
+          "required": true,
           "type": "integer"
 
         },
@@ -253,7 +94,7 @@
           "name":"limit",
           "in" :"query",
           "description": "Limit Value",
-          "required": True,
+          "required": true,
           "type": "integer"
 
         }
@@ -316,189 +157,33 @@
                     "res_status"
                 ]
             }
-      },
-      "GetDomaindetailsResponseOffsetBadRequest":{
-        "description":"Bad Request Failure Reponse",
-        "schema": {
-                "type": "object",
-                "properties": {
-                    "response": {
-                        "type": "string"
-                    },
-                    "http_status_code": {
-                        "type": "integer",
-                        "example": 400
-                    },
-                    "res_status": {
-                        "type": "string",
-                        "enum": [
-                            "INVALID_OFFSET",
-                            "INVALID_ENUM"
-                        ]
-                    }
-                },
-                "required": [
-                    "response",
-                    "http_status_code",
-                    "res_status"
-                ]
-            }
-      },
-      "GetDomainDetailsResponse":{
-        "description":"Success Response",
-        "schema":{
-          "type":"object",
-          "properties":{
-            "domain_details":{
-              "type":"object",
-                "properties":{
-                  "domain_name":{
-                    "type":"string"
-                  },
-                  "description":{
-                    "type":"string"
-                  },
-                  "domain_members_count":{
-                    "type":"integer"
-                  },
-                  "domain_posts_count":{
-                    "type":"integer"
-                  },
-                  "domain_experts":{
-                    "type":"array",
-                    "items":{
-                      "$ref":"#/definitions/User"
-                    }
-                  }
-                },
-                "required":[
-                  "domain_name",
-                  "description",
-                  "domain_members_count",
-                  "domain_posts_count",
-                  "domain_experts"
-                ]
-
-                  }
-
-                },
-          "required":[
-            "domain_details"
-          ]
-        }
-      },
-      "DomainDetailsResponseNotFoundResponse":{
-        "description":"Not Found Failure Reponse",
-        "schema": {
-                "type": "object",
-                "properties": {
-                    "response": {
-                        "type": "string"
-                    },
-                    "http_status_code": {
-                        "type": "integer",
-                        "example": 404
-                    },
-                    "res_status": {
-                        "type": "string",
-                        "enum": [
-                            "INVALID_DOMAIN_ID"
-                        ]
-                    }
-                },
-                "required": [
-                    "response",
-                    "http_status_code",
-                    "res_status"
-                ]
-            }
-      },
-      "GetDomainPostsResponse":{
-        "description": "Success Response",
-        "schema":{
-          "type":"array",
-          "items":{
-            "$ref":"#/definitions/Post"
-          }
-        }
       }
     },
     "paths": {
         "/user/login/v1/": {
-            "post": {
-                "operationId": "signin_user",
-                "summary": "validate user details and login valid user",
-                "description": "validate details and login the user",
-                "parameters": [{
-                    "$ref": "#/parameters/LoginParameters"
-                }],
-                "responses": {
-                    "200": {
-                        "$ref": "#/responses/LoginResponse"
-                    },
-                    "404": {
-                        "$ref":"#/responses/LoginFailureReponseNotFoundResponse"
-                    },
-                    "400":{
-                      "$ref":"#/responses/LoginFailureReponseBadRequestResponse"
-                    }
-                }
-            }
-        },
-      "/domain/{domain_id}/v1/":{
-        "get":{
-          "operationId": "get_domain_details",
-          "summary": " Get domain details",
-          "description":" Get details of Particular Domain",
-          "parameters": [
+          "post": {
+            "operationId": "signin_user",
+            "summary": "validate user details and login valid user",
+            "description": "validate details and login the user",
+            "security": [
+            ],
+            "parameters": [
               {
-                  "name": "domain_id",
-                  "in": "path",
-                  "required": true,
-                  "type": "integer"
+                "$ref": "#/parameters/LoginParameters"
               }
-          ],
-          "responses":{
-            "200":{
-              "$ref": "#/responses/GetDomainDetailsResponse"
-            },
-            "404":{
-              "$ref":"#/responses/DomainDetailsResponseNotFoundResponse"
+            ],
+            "responses": {
+              "200": {
+                "$ref": "#/responses/LoginResponse"
+              },
+              "404": {
+                "$ref": "#/responses/LoginFailureReponseNotFoundResponse"
+              },
+              "400": {
+                "$ref": "#/responses/LoginFailureReponseBadRequestResponse"
+              }
             }
           }
         }
-      },
-      "/domain/{domain_id}/posts/v1/":{
-        "get":{
-          "operationId": "get_domain_posts",
-          "summary": "Get Domain Posts",
-          "description": "Get details of particular domain",
-          "parameters":[
-            {
-                  "name": "domain_id",
-                  "in": "path",
-                  "required": true,
-                  "type": "integer"
-            },
-            {
-                "$ref": "#/parameters/DomainPostsLimitParameter"
-              },
-              {
-                "$ref": "#/parameters/DomainPostsOffsetParameter"
-              }
-          ],
-          "responses":{
-            "200":{
-              "$ref": "#/responses/GetDomainPostsResponse"
-            },
-            "404":{
-              "$ref":"#/responses/DomainDetailsResponseNotFoundResponse"
-            },
-            "400":{
-              "$ref": "#/responses/GetDomaindetailsResponseOffsetBadRequest"
-            }
-          }
-      }
-    }
     }
 }
